Fixed: Wordpress admin bar overlapping the header

--- a/assets/scss/layout/_grid.scss
+++ b/assets/scss/layout/_grid.scss
@@ -9,17 +9,15 @@
 }
 
 .admin-bar {
-  padding-top: calc(#{$space-medium} + #{$space-small} + 46px);
-  
-  @media(min-width: 783px) {
-    padding-top: calc(#{$space-medium} + #{$space-small} + 32px);
+  @media(max-width: 782px) {
+    #wpadminbar {
+      display: none;
+    }
   }
   
-  .header {
-    margin-top: 46px;
-    
+  .header {    
     @media(min-width: 783px) {
-      margin-top: 32px;
+      top: 32px;
     }
   }
 }
